--- a/content/_includes/layouts/book.njk
+++ b/content/_includes/layouts/book.njk
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="/book.css">
 		<link rel="stylesheet" type="text/css" href="/fonts/crimson-pro.css">
 	</head>
-	<body>
+	<body class='{% if wip %}wip{% endif %}'>
 		<header>
 			<a class='logo' href='/'>Edițiile llll</a>
 		</header>
