--- a/public/bibliography.css
+++ b/public/bibliography.css
@@ -1,3 +1,23 @@
 img {
-	width: 200px;
+	width: 12rem;
+	margin: 0.5rem 0;
+}
+
+h1:target,
+h2:target,
+h3:target,
+h4:target {
+	background: #fc0;
+}
+
+figure {
+	padding: 0.5rem;
+	margin: 1rem 0;
+	font-size: 0.8em;
+	color: #555;
+	border: 1px solid #aaa;
+}
+
+figure img {
+	margin: 0 0 0.5rem;
 }
