--- a/content/_includes/layouts/basic.njk
+++ b/content/_includes/layouts/basic.njk
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="{{titlu}}" />
 		<title>llll · {{ titlu }}</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="stylesheet" type="text/css" href="/fonts/crimson-pro.css">
@@ -12,7 +14,9 @@
 	</head>
 	<body>
 		<header>
-			<a class='logo' href='/'>Edițiile llll</a>
+			<a class='logo' href='/'>
+				<img src='/svg/llll.svg' alt='Edițiile llll'/>
+			</a>
 		</header>
 		<article>
 			<h1>{{ titlu }}</h1>
