--- a/content/_includes/layouts/home.njk
+++ b/content/_includes/layouts/home.njk
@@ -3,13 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="twitter:card" content="summary" />
 		<title>llll</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="stylesheet" type="text/css" href="/fonts/crimson-pro.css">
 	</head>
 	<body>
 		<header>
-			<a class='logo' href='/'>Edițiile llll</a>
+			<a class='logo' href='/'>
+				<img src='/svg/llll.svg' alt='Edițiile llll'/>
+			</a>
 		</header>
 
 		{{ content | safe }}
