--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,12 @@
 html {
-	font-size: 130%;
+	font-size: 120%;
+	--accent: #2e3192;
 }
 
 body {
 	font-family: 'Crimson Pro', serif;
 	line-height: 1.3;
-	max-width: 33rem;
+	max-width: 35rem;
 	margin: 0 auto;
 	padding: 0.5rem;
 }
@@ -14,8 +15,13 @@ header {
 	text-align: center;
 }
 
-.logo {
-	font-style: italic;
+.logo img {
+	height: 2.8rem;
+	padding: 0.5rem 0;
+}
+
+.logo:hover {
+	border-bottom: 0.25em solid #2e3192;
 }
 
 a {
@@ -65,7 +71,7 @@ a {
 }
 
 h1 {
-	font-size: 2.4em;
+	font-size: 2em;
 	font-weight: normal;
 	line-height: 1.1;
 	margin-top: 2rem;
