--- a/content/_includes/layouts/home.njk
+++ b/content/_includes/layouts/home.njk
@@ -4,7 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="twitter:card" content="summary" />
-		<title>llll</title>
+		<meta name="twitter:title" content="{{site.title}}" />
+		<meta name="twitter:image" content="{{site.url}}/img/favicon.png" />
+		<title>{{site.title}}</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="stylesheet" type="text/css" href="/fonts/crimson-pro.css">
 	</head>
