--- a/content/_includes/layouts/basic.njk
+++ b/content/_includes/layouts/basic.njk
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:title" content="{{titlu}}" />
-		<title>llll · {{ titlu }}</title>
+		<meta name="twitter:image" content="{{site.url}}/img/favicon.png" />
+		<title>{{site.title}} · {{ titlu }}</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="stylesheet" type="text/css" href="/fonts/crimson-pro.css">
 		{% if custom_css %}
