--- a/content/_includes/layouts/home.njk
+++ b/content/_includes/layouts/home.njk
@@ -17,6 +17,15 @@
 			</a>
 		</header>
 
-		{{ content | safe }}
+		<article>
+			{{ content | safe }}
+		</article>
+
+		<footer>
+			<hr/>
+			<p>
+				<a href='/'>Edițiile llll</a> adună ficțiuni & non–ficțiuni din domeniul public. Contact: <a href='https://danburzo.ro/about'>Dan Burzo</a>.
+			</p>
+		</footer>
 	</body>
 </html>
