--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ html {
 body {
 	font-family: 'Crimson Pro', serif;
 	line-height: 1.3;
-	max-width: 35rem;
+	max-width: 36rem;
 	margin: 0 auto;
 	padding: 0.5rem;
 }
@@ -26,48 +26,6 @@ header {
 
 a {
 	color: inherit;
-}
-
-.book-covers {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.book-cover {
-	flex: 0 0 auto;
-	width: 7em;
-	height: 11em;
-	padding: 1em;
-	border: 2px solid black;
-	background: var(--bg-color);
-	color: var(--fg-color);
-	text-decoration: none;
-	display: flex;
-	flex-direction: column;
-	line-height: 1;
-	justify-content: space-between;
-	box-shadow: 0.25em 0.25em 0 0 rgba(0,0,0, 0.25);
-	border-radius: 0 0.5em 0.5em 0;
-	margin-right: 1rem;
-	margin-bottom: 1rem;
-}
-
-.book-cover > * {
-	opacity: 0.75;
-}
-
-.book-author {
-	display: block;
-}
-
-.book-title {
-	display: block;
-	font-size: 1.4em;
-}
-
-.book-year {
-	display: block;
-	font-size: 0.8em;
 }
 
 h1 {
@@ -107,4 +65,31 @@ h5, h6 {
 
 a[href^='http']:after {
 	content: ' °';
+}
+
+article table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+article tr {
+	border-bottom: 1px solid var(--accent);
+}
+
+th, td {
+	text-align: left;
+	vertical-align: top;
+	padding: 0.5rem 0.25rem;
+}
+
+hr {
+	border: none;
+	height: 0.25em;
+	width: 50%;
+	margin: 2rem auto;
+	background: rgba(0,0,0,0.1);
+}
+
+footer {
+	text-align: center;
 }
